# inventory

./: .gitignore  compose.yml  env.example
Backend/: .gitignore  Containerfile  app.py  entrypoint.sh  fastapi_metadata.py  main.py  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/auth/: auth_bearer.py
Backend/config/: database.py  settings.py
Backend/dependencies/: permissions.py
Backend/helpers/: notnullterms.py  utils.py
Backend/models/: models.py
Backend/routes/: Suppliers_supplies.py  auth_bearer.py  brands.py  buildings.py  equipments.py  equipments_has_projects.py  groups.py  groups_supplies.py  inventory.py  invoices.py  loans.py  locations.py  logs.py  lots.py  maintenances.py  model_numbers.py  models.py  project_owners.py  projects.py  roles.py  rooms.py  stages.py  sub_locations.py  supplier_contact.py  suppliers.py  supplies.py  supplies_brands.py  supplies_formats.py  supplies_types.py  system_roles.py  units.py  user_group_role.py  users.py
Backend/schemas/: basic_option_schema.py  brand_schema.py  building_schema.py  equipment_has_project_schema.py  equipment_schema.py  group_schema.py  groups_supplies_schema.py  invoce_schema.py  loans_scheme.py  location_schema.py  log_schema.py  lot_schema.py  maintenance_schema.py  model_number_schema.py  model_schema.py  project_owner_schema.py  project_schema.py  role_schema.py  room_schema.py  stage_schema.py  sub_location_schema.py  supplier_contact_schema.py  supplier_schema.py  supplier_supply_schema.py  supplies_brand_schema.py  supplies_format_schema.py  supplies_type_schema.py  (+5 more)
(+178 files in other folders)
